Made 4 blocks, made symposium select by default, added keynote in my classes, fixed spacing for classes with long names

--- a/client/src/CSS/Components/Forms.module.css
+++ b/client/src/CSS/Components/Forms.module.css
@@ -279,9 +279,7 @@
 }
 
 .ghostButton {
-  position: absolute;
-  top: 0px;
-  right: 15px; /* Position the delete icon to the top right corner of the studentHeader */
+  margin: 0 0 0 12px;
 
   padding: 6px 15px;
   border-radius: 4px;
