--- a/client/src/CSS/Student/Views/AllClassesView.module.css
+++ b/client/src/CSS/Student/Views/AllClassesView.module.css
@@ -46,7 +46,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-right: 30px;
+  padding-right: 12px;
 }
 
 .classColor {
